# dfml

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/dfml/: __init__.py  accessor.py
tests/: test_accessor.py
