[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfml"
version = "0.1.0"
description = "sklearn-style ML preprocessing with pandas-native syntax (df.ml.scale(), df.ml.encode(), ...)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Parth Shewale" }]
requires-python = ">=3.9"
keywords = ["pandas", "scikit-learn", "machine-learning", "preprocessing", "accessor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/Parthshewale18/dfml"
Repository = "https://github.com/Parthshewale18/dfml"
Issues = "https://github.com/Parthshewale18/dfml/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dfml"]
